# AI-Obsidian-API

./: .cursorrules  .dockerignore  .env  .gitignore  CLEANUP_CHECKPOINT_SUMMARY.md  COMPLETE_IMPROVEMENTS_REPORT.md  Dockerfile.data-pipeline  ONE_LINER_TEST_COMMANDS.md  PERFORMANCE_TEST_RESULTS.md  PRODUCTION_CLEANUP_REPORT.md  README.md  SECURITY_BREACH_RESPONSE.md  codex.code-workspace  coverage.xml  docker-compose.production.yml  docker-compose.yml  env.template  go.mod  go.sum  interactive_cli.go  interactive_search_engine.go  mcp_server_main.go  performance_demo.go  pyproject.toml  quick_search.go  requirements.txt  simple_test_output.json  smart_search.go  test_enhanced_algorithms.go  test_mcp_endpoint.json  test_output.txt
.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
algorithms/: advanced_local_search.go  autocomplete_suggester.go  batch_parallel_fetcher.go  bm25_tfidf.go  caching_layer.go  candidate_aggregator.go  command_executor.go  context_assembler.go  deduplicator.go  enhanced_search_pipeline.go  full_context_retrieval_pipeline.go  local_indexer.go  metadata_boost.go  note_creation_workaround.go  proximity_matcher.go  query_composer.go  query_rewriter.go  recursive_vault_traversal.go  streaming_merger.go
backend_ops/local-api-obsidian_vault/config/: .env.example  docker-compose.enhanced-rag.yml  docker-compose.enhanced.yml  docker-compose.jsoncrack-fixed.yml  docker-compose.jsoncrack.yml  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  supabase-schema.sql
backend_ops/local-api-obsidian_vault/integrations/tool-box/flyde-docs-scraper/: COMPLETE_OPERATIONAL_INDEX.md  COMPREHENSIVE_TEST.ps1  FIX_LAUNCH.ps1  FLOW_VISUALIZATION.md  LAUNCH_ALL.ps1  LAUNCH_ALL_FIXED.ps1  OPERATIONAL_CHECKLIST.md  QUICK_START.ps1  README.md  launch_flyde_flow.ps1  launch_web_ui.ps1  main.py  pyproject.toml  requirements.txt  run_flyde_flow.js  run_hello_world.ps1  simple_test.py
backend_ops/local-api-obsidian_vault/integrations/tool-box/flyde-docs-scraper/config/: logging.py  settings.py
backend_ops/local-api-obsidian_vault/integrations/tool-box/flyde-docs-scraper/flows/: hello-world.flyde
backend_ops/local-api-obsidian_vault/integrations/tool-box/flyde-docs-scraper/mcp_servers/: scraper_mcp_server.py
backend_ops/local-api-obsidian_vault/integrations/tool-box/flyde-docs-scraper/scrapers/: base_scraper.py  playwright_scraper.py  scrapfly_scraper.py  scrapy_scraper.py
backend_ops/local-api-obsidian_vault/integrations/tool-box/flyde-docs-scraper/tests/: test_scrapers.py
backend_ops/local-api-obsidian_vault/integrations/tool-box/flyde-docs-scraper/web_ui/: main.py
client/: http_client.go
config/: cache-optimization.py  grafana.ini  otel-collector-config.yaml  otel-collector-langsmith.yml  production.env  prometheus-fixed.yml  prometheus-optimized.yml  supervisord.conf
docs/: ADVANCED_FEATURES_README.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CURSOR_RULES_GUIDE.md  CURSOR_RULES_IMPLEMENTATION_COMPLETE.md  CURSOR_RULES_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DESIGN_PATTERNS.md  DOCS_INDEX.md  DOCUMENTATION_COMPLETE_SUMMARY.md  FOLDER_REORGANIZATION_PLAN.md  LAYERED_ARCHITECTURE.md  ONE_LINER_COMMANDS.md  PERFORMANCE_METRICS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_RUNBOOK.md  PRODUCTION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  REFACTORED_RAG_SYSTEM.md  SEARCH_ALGORITHMS.md  SYSTEM_ARCHITECTURE.md  SYSTEM_DESIGN.md  SYSTEM_DIAGRAMS.md  TECHNICAL_DOCUMENTATION_COMPLETE.md  TECHNICAL_DOCUMENTATION_INDEX.md  advanced-langgraph-server-management.md  api_reference.md  command_liners.md  development_guide.md  project_summary.md  usage_examples.md
langgraph_project/: .env  env.txt  graph.py  langgraph.json
langgraph_workflows/: index.html
mcp-server/: COMPLETE_MCP_SERVER_REPORT.md  COMPLETE_SOLUTION.md  COMPLETE_TEST.bat  COMPREHENSIVE_TEST_SUITE_COMPLETE.md  CRITICAL_FIX_INSTRUCTIONS.md  DOCUMENTATION_COMPLETE.md  ENHANCED_MCP_SERVER_SUCCESS_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_WORKING_COMMANDS.md  FIXES_COMPLETE_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  INTERACTIVE_CLI.bat  NIL_LOGGER_FIX_COMPLETE.md  README.md  REAL_DATA_INTEGRATION_COMPLETE.md  REAL_DATA_INTEGRATION_SUCCESS.md  REAL_DATA_RESULTS.md  ROBUST_ONE_LINERS.md  START_EVERYTHING.bat  SUCCESS_REPORT.md  SUCCESS_SUMMARY.md  TESTING_GUIDE.md  TEST_ALL.bat  (+12 more)
(+1278 files in other folders)
