[tool.poetry]
name = "flyde-docs-scraper"
version = "0.1.0"
description = "Comprehensive web scraping system for Flyde documentation"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
scrapfly-sdk = "^0.1.0"
scrapy = "^2.11.0"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
sentry-sdk = "^1.38.0"
structlog = "^23.2.0"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3